# puNES

./: .gitignore  .whitesource  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  appveyor.yml  autogen.sh  compiled.h.in  configure.ac  crowdin.yml  xdelta_config.h.in  zh_CN.ts
misc/: Makefile.am  com.github.punesemu.puNES.desktop.in  com.github.punesemu.puNES.metainfo.xml  dip.cfg  io.github.punesemu.puNES.desktop.in  io.github.punesemu.puNES.metainfo.xml  punes.desktop  punes.desktop.in
src/: CMakeLists.txt  Makefile.am  apu.c  apu.h  audio_filter.c  audio_filter.h  audio_quality.c  audio_quality.h  cfg_file.c  cfg_file.h  cfgfile.c  cfgfile.h  clock.h  cmd_line.c  cmd_line.h  cmdline.c  cmdline.h  common.h  cpu.c  cpu.h  cpu6502.c  cpu6502.h  cpu_inline.h  cpuinline.h  database.h  emu.c  emu.h  external_calls.c  external_calls.h  externalcalls.c  externalcalls.h  fds.c  fds.h  font.h  fps.c  fps.h  gamegenie.c  gamegenie.h  gui.h  ines.c  (+58 more)
src/audio/: Makefile.am  blip_buf.c  blipbuf.c  blipbuf.h  channels.c  channels.h  delay.c  delay.h  handler.c  mono.c  mono.h  original.c  original.h  panning.c  panning.h  quality.c  quality.h  snd.h  wave.c  wave.h
src/audio/alsa/: snd.c  snd.org
src/audio/sdl/: snd.c
src/audio/sndio/: snd.c
src/audio/xaudio/: snd.c
src/c++/: Makefile.am
src/c++/crc/: Crc32.cpp  crc.cpp  crc.h
src/c++/l7zip/: l7z.c  l7z.cpp  l7z.h
src/c++/pic16c5x/: pic16c5x.cpp  pic16c5x.h  pic16c5x_m.cpp  pic16c5x_m.h
src/c++/xBRZ/: config.h  xbrz.c  xbrz.cpp  xbrz.h  xbrz_wrap.c  xbrz_wrap.cpp  xbrz_wrap.h
src/core/: Makefile.am  apu.c  apu.h  audio_quality.c  audio_quality.h  bck_states.c  bck_states.h  blip_buf.c  cfg_file.c  cfg_file.h  cheat.c  cheat.h  clock.h  cmd_line.c  cmd_line.h  common.h  compilation_unit_orphan.h  conf.h  cpu.c  cpu.h  cpu_inline.h  database.h  debugger.h  detach_barcode.c  detach_barcode.h  draw_on_screen.c  draw_on_screen.h  draw_on_screen_font.h  emu.c  emu.h  emu_thread.c  emu_thread.h  external_calls.c  external_calls.h  fds.c  fds.h  font.h  fps.c  fps.h  gamegenie.h  (+79 more)
src/core/input/: arkanoid.c  arkanoid.h  famicom.c  famicom.h  family_basic_keyboard.c  family_basic_keyboard.h  four_score.c  four_score.h  mouse.h  nes_001.c  nes_001.h  nsf_controller.c  nsf_controller.h  nsf_mouse.c  nsf_mouse.h  oeka_kids_tablet.c  oeka_kids_tablet.h  snes_mouse.c  snes_mouse.h  standard.c  standard.h  standard_controller.c  standard_controller.h  subor_keyboard.c  subor_keyboard.h  vs.c  vs.h  zapper.c  zapper.h
src/core/mappers/: EE93Cx6.c  EE93Cx6.h  FCG.c  FCG.h  FME7.c  FME7.h  JV001.c  JV001.h  JYASIC.c  JYASIC.h  KS202.c  KS202.h  LZ93D50.c  LZ93D50.h  MMC1.c  MMC1.h  MMC2.c  MMC2.h  MMC3.c  MMC3.h  MMC4.c  MMC4.h  N118.c  N118.h  OneBus.c  OneBus.h  SST39SF040.c  SST39SF040.h  TXC.c  TXC.h  VRC2and4.c  VRC2and4.h  VRC6.c  VRC6.h  VRC7.c  VRC7.h  VRC7_snd.c  VRC7_snd.h  butterworth.cpp  butterworth.h  (+1197 more)
src/d3d9/: audio_quality.c  cfg_file.c  cfg_file.h  cfg_input.c  cfg_overscan_borders.h  cfg_std_pad.c  cmd_line.c  gfx.c  gfx.h  gui.h  gui_snd.h  joystick.c  joystick.h  keyboard.c  keyboard.h  param.h  resources.h  resources.rc  shaders.h  snd.c  snd.h  text.c  text.h  uncompress_selection.c  uncompress_selection.h  win.c  win.h
src/d3d9/shaders/: color.h  crt.h  crt4.h  dbl.h  hq2x.h  no_filter.h  ntsc.h  phosphor.h  pixellate.h  scale2x.h  scale3x.h  scale4x.h  scanline.h
src/extra/: Makefile.am  NTSC-CRT-NES-puNES.patch  NTSC-CRT-puNES.patch  PAL-CRT-puNES.patch  filter-c-puNES.patch  lib7zip-3.0.1wip-53abfeb-puNES.patch  lib7zip-3.0.1wip-88165f8-7z1900.patch  lib7zip-3.0.1wip-88165f8-puNES.patch  lib7zip-only-static-lib.patch  p7zip-no-warnings.patch  qkeycode-puNES.patch  singleapplication-puNES.patch  xdelta-configure.patch  xdelta-puNES.patch
src/extra/NTSC-CRT/: CMakeLists.txt  LICENSE  README.md  bmp_rw.c  bmp_rw.h  controls.txt  crt_core.c  crt_core.h  crt_core_nesrgb.c  crt_core_nesrgb.h  crt_main.c  crt_nes.c  crt_nes.h  crt_nesrgb.c  crt_nesrgb.h  crt_ntsc.c  crt_ntsc.h  crt_ntscvhs.c  crt_ntscvhs.h  crt_pv1k.c  crt_pv1k.h  crt_snes.c  crt_snes.h  crt_template.c  crt_template.h  ppm_rw.c  ppm_rw.h
src/extra/Nuked-OPLL/: opll.c
src/extra/PAL-CRT/: CMakeLists.txt  README.md  bmp_rw.c  bmp_rw.h  controls.txt  (+13 more)
src/filters/: bilinear.c  bisquit.c  hq3x.c  hqx_inline.h  ntsc.c  ntsc.h  scale.c  scale.h  scale2x.c
src/glew/: glew.c  glxew.h
src/gui/: Makefile.am  application.cpp  application.hh  audio_outin_dev.cpp  audio_outin_dev.h  cgp.cpp  cgp.h  cheatObject.cpp  cheatObject.hpp  cmd_line.cpp  cmd_line.h  dipswitch.cpp  dipswitch.h  dlgAPUChannels.cpp  dlgAPUChannels.hpp  dlgAbout.cpp  dlgAbout.hpp  dlgApuChannels.cpp  dlgApuChannels.hh  dlgApuChannels.hpp  dlgApuChannels.moc  dlgCheats.cpp  dlgCheats.hpp  dlgCmdLineHelp.cpp  dlgCmdLineHelp.hpp  dlgDetachBarcode.cpp  dlgDetachBarcode.hpp  dlgDipswitch.cpp  dlgDipswitch.hpp  dlgHeaderEditor.cpp  dlgHeaderEditor.hpp  dlgInput.cpp  dlgInput.hh  dlgInput.hpp  dlgInput.moc  dlgJsc.cpp  dlgJsc.hpp  dlgKeyboard.cpp  dlgKeyboard.hpp  dlgLog.cpp  (+112 more)
src/l7zip/: l7z.c  l7z.h  lib7zip.h
src/mappers/: mapper0.c  mapper0.h  mapper114.c  mapper114.h  mapper116.c  mapper116.h  mapper120.c  mapper120.h  mapper121.c  mapper121.h  mapper156.c  mapper156.h  mapper176.c  mapper176.h  mapper178.c  mapper178.h  mapper182.c  mapper182.h  mapper183.c  mapper183.h  mapper186.c  mapper186.h  mapper200.c  mapper200.h  mapper201.c  mapper201.h  mapper202.c  mapper202.h  mapper203.c  mapper203.h  mapper204.c  mapper204.h  mapper205.c  mapper205.h  mapper208.c  mapper208.h  mapper212.c  mapper212.h  mapper213.c  mapper213.h  (+372 more)
src/openGL/: cube3d.c  cube3d.h  no_effect.c  no_effect.h  shaders.h
src/sdl/: audio_quality.c  audio_quality.h  cfg_file.c  cfg_file.h  cmd_line.c  cmd_line.h  gfx.c  gfx.h  gui.h  gui_snd.h  opengl.c  opengl.h  param.h  shaders.h  snd.c  snd.h  text.c  text.h  zeromq.c
src/test/: netplay.c  zeromq.h
src/uncompress/: l7z.cpp
src/video/: Makefile.am  gfx.c  gfx.h  gfx_monitor.c  gfx_monitor.h  gfx_thread.c  gfx_thread.h  pnp_vendor.h
(+1913 files in other folders)
